force-app/main/default/objects/POC__c/fields/Planned_Installation_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Planned_Installation_Date_Time__c</fullName>
    <label>Planned Installation Date Time</label>
    <type>DateTime</type>
</CustomField>