force-app/main/default/objects/POC__c/fields/POC_Account__c.field-meta.xml
<CustomField>
    <fullName>POC_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>(DEPRECATED) POC Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>POC Requests (POC Account)</relationshipLabel>
    <relationshipName>POC_Account_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>