force-app/main/default/objects/POC__c/fields/POC_Age__c.field-meta.xml
<CustomField>
    <fullName>POC_Age__c</fullName>
    <description>this calculate the number of days from shipped to returned</description>
    <formula>Date_Returned_hid__c -  Date_Shipped_hid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(DEPRECATED) POC Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>