force-app/main/default/objects/POC__c/fields/POC_Aging__c.field-meta.xml
<CustomField>
    <fullName>POC_Aging__c</fullName>
    <formula>ABS(Last_Update_POC_Status__c - TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(DEPRECATED) POC Aging</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>