force-app/main/default/objects/POC__c/fields/POC_Agreement__c.field-meta.xml
<CustomField>
    <fullName>POC_Agreement__c</fullName>
    <inlineHelpText>POC Agreement accepted by End User?</inlineHelpText>
    <label>Online POC Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>