force-app/main/default/objects/POC__c/fields/POC_Agreement_Waived__c.field-meta.xml
<CustomField>
    <fullName>POC_Agreement_Waived__c</fullName>
    <formula>IF(
 OR(
  Disty_with_Signed_POC_Addendum__r.Name = &apos;Commtech&apos;,
  Disty_with_Signed_POC_Addendum__r.Name = &apos;VCP&apos;,
  Disty_with_Signed_POC_Addendum__r.Name = &apos;Promark&apos;,
  Disty_with_Signed_POC_Addendum__r.Name = &apos;Alturna Tech&apos;,
  Disty_with_Signed_POC_Addendum__r.Name = &apos;Anexinet&apos;,
  Disty_with_Signed_POC_Addendum__r.Name = &apos;Application 2U, LLC&apos;,
  Disty_with_Signed_POC_Addendum__r.Name = &apos;Arrosoft Solutions LLC&apos;,
  Disty_with_Signed_POC_Addendum__r.Name = &apos;Virtual Enterprises&apos;,
  Disty_with_Signed_POC_Addendum__r.Name = &apos;Redicloud&apos;,
  Disty_with_Signed_POC_Addendum__r.Name = &apos;Bay Pointe Technology&apos;,
  Disty_with_Signed_POC_Addendum__r.Name = &apos;BEArena&apos;
), TRUE, FALSE )</formula>
    <inlineHelpText>Contingent Upon a Distributor having a signed POC Addendum</inlineHelpText>
    <label>POC Agreement Waived</label>
    <type>Checkbox</type>
</CustomField>