force-app/main/default/objects/POC__c/fields/POC_Agreement_Waived_Customer__c.field-meta.xml
<CustomField>
    <fullName>POC_Agreement_Waived_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreement Waived (Existing Customer)</label>
    <type>Checkbox</type>
</CustomField>