force-app/main/default/objects/POC__c/fields/POC_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>POC_Approval_Date__c</fullName>
    <label>POC Approval Date</label>
    <type>DateTime</type>
</CustomField>