force-app/main/default/objects/POC__c/fields/POC_Approval_Date_old__c.field-meta.xml
<CustomField>
    <fullName>POC_Approval_Date_old__c</fullName>
    <description>Updates the Approval Date and will feed into Estimated POC Decision Date</description>
    <formula>IF(ISPICKVAL( Approval_Status__c , &apos;Approved&apos;), NOW(), NULL)</formula>
    <label>(DEPRECATED) POC Approval Date</label>
    <type>DateTime</type>
</CustomField>