force-app/main/default/objects/POC__c/fields/POC_Approved__c.field-meta.xml
<CustomField>
    <fullName>POC_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box will be checked when POC Status is Approved.  This field is used to trigger the workflow notification to Support when &quot;1-Yr Subscription to Rubrik Edge for 10 VMs, incl support&quot; is approved.</description>
    <label>POC Approved</label>
    <type>Checkbox</type>
</CustomField>