force-app/main/default/objects/POC__c/fields/POC_Approver_Email__c.field-meta.xml
<CustomField>
    <fullName>POC_Approver_Email__c</fullName>
    <formula>Owner:User.POC_Approver__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POC Approver Email</label>
    <type>Text</type>
</CustomField>