force-app/main/default/objects/POC__c/fields/POC_Asset_Returned__c.field-meta.xml
<CustomField>
    <fullName>POC_Asset_Returned__c</fullName>
    <formula>OR(
	ISPICKVAL( POC_Stage__c, &apos;Return Sale&apos; ),
	ISPICKVAL( POC_Stage__c, &apos;Return No Sale&apos; ),
	ISPICKVAL( POC_Stage__c, &apos;Converted&apos; ),
	ISPICKVAL( POC_Stage__c, &apos;Extended POC&apos; ),
	ISPICKVAL( POC_Stage__c, &apos;Completed Test Plan&apos; )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(DEPRECATED) POC Asset Returned</label>
    <type>Checkbox</type>
</CustomField>