force-app/main/default/objects/POC__c/fields/POC_Bundle_Type__c.field-meta.xml
<CustomField>
    <fullName>POC_Bundle_Type__c</fullName>
    <label>POC Bundle Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PLS Only SKUs</fullName>
            </value>
            <value>
                <fullName>No PLS SKUs</fullName>
            </value>
            <value>
                <fullName>Mixed SKUs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>