force-app/main/default/objects/POC__c/fields/POC_Converted__c.field-meta.xml
<CustomField>
    <fullName>POC_Converted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>(DEPRECATED) POC Converted</label>
    <type>Checkbox</type>
</CustomField>