force-app/main/default/objects/POC__c/fields/POC_Duration__c.field-meta.xml
<CustomField>
    <fullName>POC_Duration__c</fullName>
    <description>A selection of estimated time frames for a POC to be successfully run for the potential customer.</description>
    <inlineHelpText>Estimate your time frame for this POC</inlineHelpText>
    <label>POC Duration</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>POC_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>15</fullName>
                <label>15 Days</label>
            </value>
            <value>
                <fullName>30 Days</fullName>
                <default>true</default>
                <label>30 Days</label>
            </value>
            <value>
                <fullName>60 Days</fullName>
            </value>
            <value>
                <fullName>90 Days</fullName>
            </value>
            <value>
                <fullName>120 Days</fullName>
            </value>
            <value>
                <fullName>2 Days</fullName>
            </value>
            <value>
                <fullName>4 Days</fullName>
            </value>
            <value>
                <fullName>6 Days</fullName>
            </value>
            <value>
                <fullName>8 Days</fullName>
            </value>
            <value>
                <fullName>10 Days</fullName>
            </value>
            <value>
                <fullName>12 Days</fullName>
            </value>
            <value>
                <fullName>14 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>