force-app/main/default/objects/POC__c/fields/POC_Duration_Number__c.field-meta.xml
<CustomField>
    <fullName>POC_Duration_Number__c</fullName>
    <formula>New_Expected_End_Date__c  - Planned_Installation_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POC Duration Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>