force-app/main/default/objects/POC__c/fields/POC_End_Date__c.field-meta.xml
<CustomField>
    <fullName>POC_End_Date__c</fullName>
    <label>Try n Buy POC End Date</label>
    <type>Date</type>
</CustomField>