force-app/main/default/objects/POC__c/fields/POC_Expired__c.field-meta.xml
<CustomField>
    <fullName>POC_Expired__c</fullName>
    <formula>IF(
   ISNULL(Last_Update_POC_Status__c),
   (POC_completion_date__c + 7) &lt;= TODAY(),
   (Last_Update_POC_Status__c + 7) &lt;= TODAY()
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(DEPRECATED) POC Expired</label>
    <type>Checkbox</type>
</CustomField>