force-app/main/default/objects/POC__c/fields/POC_Expired_Date__c.field-meta.xml
<CustomField>
    <fullName>POC_Expired_Date__c</fullName>
    <formula>POC_completion_date__c + 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(DEPRECATED) POC Expired Date</label>
    <type>Date</type>
</CustomField>