force-app/main/default/objects/POC__c/fields/POC_Extension_Duration__c.field-meta.xml
<CustomField>
    <fullName>POC_Extension_Duration__c</fullName>
    <label>POC Extension Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15 Days</fullName>
            </value>
            <value>
                <fullName>30 Days</fullName>
            </value>
            <value>
                <fullName>60 Days</fullName>
            </value>
            <value>
                <fullName>90 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>