force-app/main/default/objects/POC__c/fields/POC_Extension_Reason__c.field-meta.xml
<CustomField>
    <fullName>POC_Extension_Reason__c</fullName>
    <label>POC Extension Reason</label>
    <type>TextArea</type>
</CustomField>