force-app/main/default/objects/POC__c/fields/POC_Justification__c.field-meta.xml
<CustomField>
    <fullName>POC_Justification__c</fullName>
    <description>Justification for the POC</description>
    <inlineHelpText>Give a description of the environment and goals of the POC.</inlineHelpText>
    <label>POC Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>