force-app/main/default/objects/POC__c/fields/POC_Product_and_Duration_Information__c.field-meta.xml
<CustomField>
    <fullName>POC_Product_and_Duration_Information__c</fullName>
    <label>(DEPRECATED) Additional Product Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>