force-app/main/default/objects/POC__c/fields/POC_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>POC_Product_Code__c</fullName>
    <label>POC Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>