force-app/main/default/objects/POC__c/fields/POC_Purpose__c.field-meta.xml
<CustomField>
    <fullName>POC_Purpose__c</fullName>
    <formula>TEXT( Opportunity__r.POC_VP_Qualification_Override__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POC - Purpose</label>
    <type>Text</type>
</CustomField>