force-app/main/default/objects/POC__c/fields/POC_Qty__c.field-meta.xml
<CustomField>
    <fullName>POC_Qty__c</fullName>
    <description>Amount of POC units requested</description>
    <inlineHelpText>How many units are requested?</inlineHelpText>
    <label>POC Qty</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>