force-app/main/default/objects/POC__c/fields/POC_Relocation__c.field-meta.xml
<CustomField>
    <fullName>POC_Relocation__c</fullName>
    <inlineHelpText>Select &quot;Yes&quot; if this is a POC relocation</inlineHelpText>
    <label>POC Relocation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>