force-app/main/default/objects/POC__c/fields/POC_Relocation_Asset__c.field-meta.xml
<CustomField>
    <fullName>POC_Relocation_Asset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>POC Relocation Asset</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Asset.Status</field>
            <operation>equals</operation>
            <value>POC, POC Long Term, POC Unassigned</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>POC Requests (POC Relocation Asset)</relationshipLabel>
    <relationshipName>POC_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>