force-app/main/default/objects/POC__c/fields/POC_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>POC_Return_Date__c</fullName>
    <label>POC Return Date</label>
    <type>DateTime</type>
</CustomField>