force-app/main/default/objects/POC__c/fields/POC_Return_Status__c.field-meta.xml
<CustomField>
    <fullName>POC_Return_Status__c</fullName>
    <description>Describe in detail when your unit is ready to return or convert</description>
    <inlineHelpText>Describe in detail when your unit is ready to return or convert</inlineHelpText>
    <label>POC Return Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>