force-app/main/default/objects/POC__c/fields/POC_Returned__c.field-meta.xml
<CustomField>
    <fullName>POC_Returned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>POC Returned</label>
    <type>Checkbox</type>
</CustomField>