force-app/main/default/objects/POC__c/fields/POC_Sent__c.field-meta.xml
<CustomField>
    <fullName>POC_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked by Fulfillment when POC product sent to customer</description>
    <label>(DEPRECATED) POC Sent</label>
    <type>Checkbox</type>
</CustomField>