force-app/main/default/objects/POC__c/fields/POC_Shipping_Information_Comments__c.field-meta.xml
<CustomField>
    <fullName>POC_Shipping_Information_Comments__c</fullName>
    <label>Additional Shipping Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>