force-app/main/default/objects/POC__c/fields/POC_Source__c.field-meta.xml
<CustomField>
    <fullName>POC_Source__c</fullName>
    <formula>IF(
ISPICKVAL( Opportunity__r.LeadSource, &apos;Try it Now&apos; ), &apos;Try it Now&apos; , &apos;Internal&apos;
)</formula>
    <label>(DEPRECATED) POC Source</label>
    <type>Text</type>
</CustomField>