force-app/main/default/objects/POC__c/fields/POC_Stage__c.field-meta.xml
<CustomField>
    <fullName>POC_Stage__c</fullName>
    <label>(DEPRECATED) POC Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre-POC Steps</fullName>
            </value>
            <value>
                <fullName>Execute Test Plan</fullName>
            </value>
            <value>
                <fullName>Completed Test Plan</fullName>
            </value>
            <value>
                <fullName>Return Sale</fullName>
            </value>
            <value>
                <fullName>Return No Sale</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
            <value>
                <fullName>Extended POC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>