force-app/main/default/objects/POC__c/fields/POC_Status_Details__c.field-meta.xml
<CustomField>
    <fullName>POC_Status_Details__c</fullName>
    <label>POC Status Details</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>