force-app/main/default/objects/POC__c/fields/POC_Submitter__c.field-meta.xml
<CustomField>
    <fullName>POC_Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>POC Submitter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>POC_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>