force-app/main/default/objects/POC__c/fields/POC_Submitter_Email__c.field-meta.xml
<CustomField>
    <fullName>POC_Submitter_Email__c</fullName>
    <formula>Owner:User.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POC Submitter Email</label>
    <type>Text</type>
</CustomField>