force-app/main/default/objects/POC__c/fields/POC_Terms_Agreed_to_by_Customer__c.field-meta.xml
<CustomField>
    <fullName>POC_Terms_Agreed_to_by_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be filled in via field update triggered by workflow from POC request form. Customer must agree to POC terms to finalize POC request. Will generate datestamp OR time/datestamp via formula</description>
    <label>POC Terms Agreed to by Customer</label>
    <type>Checkbox</type>
</CustomField>