force-app/main/default/objects/POC__c/fields/POC_Tracking__c.field-meta.xml
<CustomField>
    <fullName>POC_Tracking__c</fullName>
    <label>(DEPRECATED) POC Tracking #</label>
    <type>TextArea</type>
</CustomField>