force-app/main/default/objects/POC__c/fields/POC_Type__c.field-meta.xml
<CustomField>
    <fullName>POC_Type__c</fullName>
    <label>POC Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard POC</fullName>
            </value>
            <value>
                <fullName>Standard POC : RSC-G</fullName>
            </value>
            <value>
                <fullName>Virtual Lab</fullName>
            </value>
            <value>
                <fullName>Web Try and Buy</fullName>
            </value>
            <value>
                <fullName>CSAT Loaner</fullName>
            </value>
            <value>
                <fullName>Ransomware Recovery Software</fullName>
            </value>
            <value>
                <fullName>Partner Software Access</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>