force-app/main/default/objects/POC__c/fields/Polaris_Contact__c.field-meta.xml
<CustomField>
    <fullName>Polaris_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RSC Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>POC Requests (Polaris Contact)</relationshipLabel>
    <relationshipName>POC_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>