force-app/main/default/objects/POC__c/fields/Polaris_Platfrom__c.field-meta.xml
<CustomField>
    <fullName>Polaris_Platfrom__c</fullName>
    <label>Polaris Platfrom</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RCDM</fullName>
            </value>
            <value>
                <fullName>RSC</fullName>
                <default>true</default>
                <label>RSC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>