force-app/main/default/objects/POC__c/fields/Polaris_Region__c.field-meta.xml
<CustomField>
    <fullName>Polaris_Region__c</fullName>
    <label>RSC Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>Singapore</fullName>
            </value>
            <value>
                <fullName>Switzerland</fullName>
            </value>
            <value>
                <fullName>Indonesia</fullName>
            </value>
            <value>
                <fullName>Israel</fullName>
            </value>
            <value>
                <fullName>Saudi Arabia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>