force-app/main/default/objects/POC__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>r6304s</fullName>
            </value>
            <value>
                <fullName>r6404s</fullName>
            </value>
            <value>
                <fullName>r6408s</fullName>
            </value>
            <value>
                <fullName>r6410s</fullName>
            </value>
            <value>
                <fullName>r6412s</fullName>
            </value>
            <value>
                <fullName>r6416S</fullName>
            </value>
            <value>
                <fullName>r6420S</fullName>
            </value>
            <value>
                <fullName>r7420S</fullName>
            </value>
            <value>
                <fullName>r7424S</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>