force-app/main/default/objects/POC__c/fields/Product_Categories__c.field-meta.xml
<CustomField>
    <fullName>Product_Categories__c</fullName>
    <label>Product Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rubrik Appliance</fullName>
            </value>
            <value>
                <fullName>Edge</fullName>
            </value>
            <value>
                <fullName>NAS Cloud Direct</fullName>
            </value>
            <value>
                <fullName>Rubrik Cloud Vault</fullName>
            </value>
            <value>
                <fullName>RSC Enterprise Edition</fullName>
            </value>
            <value>
                <fullName>Ransomware Monitoring &amp; Investigation</fullName>
            </value>
            <value>
                <fullName>Sensitive Data Monitoring &amp; Remediation</fullName>
            </value>
            <value>
                <fullName>Orchestrated Application Recovery</fullName>
            </value>
            <value>
                <fullName>UCL (Cloud Cluster, Cloud Native &amp; Entra ID)</fullName>
            </value>
            <value>
                <fullName>Cloud Unstructured (S3, Azure Blob, and Cloud Files)</fullName>
            </value>
            <value>
                <fullName>SaaS (Jira Cloud, Salesforce, Dynamics)</fullName>
            </value>
            <value>
                <fullName>M365 and Entra ID</fullName>
            </value>
            <value>
                <fullName>Laminar</fullName>
            </value>
            <value>
                <fullName>RSC 3rd Party S/W With Enterprise Ed.</fullName>
            </value>
            <value>
                <fullName>RSC-Private with Enterprise Edition</fullName>
            </value>
            <value>
                <fullName>SAP HANA for Cloud Cluster</fullName>
            </value>
            <value>
                <fullName>RSC Proactive Edition</fullName>
            </value>
            <value>
                <fullName>RSC-G Enterprise Edition</fullName>
            </value>
            <value>
                <fullName>RSC-G Proactive Edition</fullName>
            </value>
            <value>
                <fullName>UCL(Cloud Cluster &amp; Cloud Native)</fullName>
            </value>
            <value>
                <fullName>Rubrik Cloud Vault - Government</fullName>
            </value>
            <value>
                <fullName>RSC-G Third Party Software with Enterprise Edition</fullName>
            </value>
            <value>
                <fullName>M365</fullName>
            </value>
            <value>
                <fullName>Identity Recovery</fullName>
            </value>
            <value>
                <fullName>Data Security Posture Management</fullName>
            </value>
            <value>
                <fullName>Codebase Recovery</fullName>
            </value>
            <value>
                <fullName>RSC Enterprise and Proactive Editions</fullName>
            </value>
            <value>
                <fullName>RSC-G Enterprise and Proactive Editions</fullName>
            </value>
            <value>
                <fullName>RSC-Private</fullName>
            </value>
            <value>
                <fullName>Annapurna</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>