force-app/main/default/objects/POC__c/fields/Product_Codes__c.field-meta.xml
<CustomField>
    <fullName>Product_Codes__c</fullName>
    <label>Product Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>