force-app/main/default/objects/POC__c/fields/Product_Family_for_PoC__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_for_PoC__c</fullName>
    <label>(DEPRECATED) Product for PoC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>r344, 4-node, 48TB, dual-port SFP+ NIC</fullName>
            </value>
            <value>
                <fullName>r344, 4-node, 48TB, dual-port 10GBase-T NIC</fullName>
            </value>
            <value>
                <fullName>r348, 4-node, 96TB, dual-port SFP+ NIC</fullName>
            </value>
            <value>
                <fullName>r348, 4-node, 96TB, dual-port 10GBase-T NIC</fullName>
            </value>
            <value>
                <fullName>r528, 2-node, 96TB (FIPS 140-2 level 2 self-encrypting), dual-port SFP+</fullName>
            </value>
            <value>
                <fullName>r528, 2-node, 96TB (FIPS 140-2 level 2 self-encrypting), dual-port 10GBase-T NIC</fullName>
            </value>
            <value>
                <fullName>1-Yr Subscription to Rubrik Edge for 10 VMs, incl support</fullName>
            </value>
            <value>
                <fullName>1-Yr Subscription to Rubrik Cloud Data Management for Azure 1TB raw, incl support</fullName>
            </value>
            <value>
                <fullName>1-Yr Subscription to Rubrik Cloud Data Management for AWS 1TB raw, incl support</fullName>
            </value>
            <value>
                <fullName>r3410 Appliance, 4-node, 120TB, SFP+ NIC, RCDM</fullName>
            </value>
            <value>
                <fullName>r3410 Appliance, 4-node, 120TB, 10GBase-T NIC, RCDM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>