force-app/main/default/objects/POC__c/fields/Product_for_POC__c.field-meta.xml
<CustomField>
    <fullName>Product_for_POC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The product being tested as POC</description>
    <inlineHelpText>Choose the product the customer will be testing.</inlineHelpText>
    <label>(DEPRECATED) Product for POC.</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>POC Requests</relationshipLabel>
    <relationshipName>POC_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>