force-app/main/default/objects/POC__c/fields/Products_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Products_Email_Sent__c</fullName>
    <label>Products Email Sent</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NAS Cloud Direct</fullName>
            </value>
            <value>
                <fullName>Laminar</fullName>
            </value>
            <value>
                <fullName>NAS Cloud Direct on Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>