force-app/main/default/objects/POC__c/fields/Ranger_Support_Expected__c.field-meta.xml
<CustomField>
    <fullName>Ranger_Support_Expected__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Rangers will be notified. You will need to follow up with the Rangers team for details on the support action you need</inlineHelpText>
    <label>(DEPRECATED) Ranger Support Expected</label>
    <type>Checkbox</type>
</CustomField>