force-app/main/default/objects/POC__c/fields/Ransomware_Recovery_Software_Acknowledge__c.field-meta.xml
<CustomField>
    <fullName>Ransomware_Recovery_Software_Acknowledge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Description: Created for MKT24 - 619.</description>
    <label>Ransomware Recovery Software Acknowledge</label>
    <type>Checkbox</type>
</CustomField>