force-app/main/default/objects/POC__c/fields/RD_Email__c.field-meta.xml
<CustomField>
    <fullName>RD_Email__c</fullName>
    <label>RD Email</label>
    <type>Email</type>
</CustomField>