force-app/main/default/objects/POC__c/fields/Replication__c.field-meta.xml
<CustomField>
    <fullName>Replication__c</fullName>
    <label>(DEPRECATED) Replication</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>