force-app/main/default/objects/POC__c/fields/RRT_Incident_Manager__c.field-meta.xml
<CustomField>
    <fullName>RRT_Incident_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Description: Created for MKT24 - 619.</description>
    <label>RRT Incident Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>notEqual</operation>
            <value>Rubrik Partner Community User</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>notEqual</operation>
            <value>Rubrik Partner Community Manager</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>notEqual</operation>
            <value>Rubrik Customer Community Login User</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>notEqual</operation>
            <value>Rubrik Customer Community Login User (No Cases)</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>notEqual</operation>
            <value>Rubrik Customer Community Read Only User</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>notEqual</operation>
            <value>Rubrik Customer Community Super Login User</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>POC_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>