force-app/main/default/objects/POC__c/fields/RSC_3rd_Party_Acknowledgment__c.field-meta.xml
<CustomField>
    <fullName>RSC_3rd_Party_Acknowledgment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RSC-3rd Party Acknowledgment</label>
    <type>Checkbox</type>
</CustomField>